CustomObjects/objects/invoiceit_s__Job_Rate_Plan__c.object
<CustomObject>
    <description>The tier 2 of the product catalog linked to the Order.</description>
    <fields>
        <fullName>QTC__Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Rate Plans</relationshipLabel>
        <relationshipName>Order_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Charges_without_a_Charge_Date__c</fullName>
        <label>Charges without a Charge Date</label>
        <summaryFilterItems>
            <field>invoiceit_s__Job_Rate_Plan_Charge__c.invoiceit_s__Charge_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>invoiceit_s__Job_Rate_Plan_Charge__c.invoiceit_s__Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Job_Product__c</fullName>
        <label>Order Product</label>
        <referenceTo>invoiceit_s__Job_Product__c</referenceTo>
        <relationshipLabel>Order Rate Plans</relationshipLabel>
        <relationshipName>Job_Rate_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Minimum_Next_Charge_Date_For_Product3__c</fullName>
        <label>Minimum Next Charge Date For Product</label>
        <summarizedField>invoiceit_s__Job_Rate_Plan_Charge__c.invoiceit_s__Next_Charge_Date__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Job_Rate_Plan_Charge__c.invoiceit_s__Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>invoiceit_s__Product_Rate_Plan__c</referenceTo>
        <relationshipName>Job_Rate_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>invoiceit_s__Job_Rate_Plan__c</referenceTo>
        <relationshipLabel>Order Rate Plans</relationshipLabel>
        <relationshipName>Order_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__SequenceNumber__c</fullName>
        <label>Order RatePlan Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Job_Rate_Plans_Charges__c</fullName>
        <label>Total Job Rate Plans Charges</label>
        <summaryForeignKey>invoiceit_s__Job_Rate_Plan_Charge__c.invoiceit_s__Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Price__c</fullName>
        <label>Total Price</label>
        <summarizedField>invoiceit_s__Job_Rate_Plan_Charge__c.invoiceit_s__Price__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Job_Rate_Plan_Charge__c.invoiceit_s__Job_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Order Rate Plan</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>